fixed some spacing with new navbar

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,7 @@
 .social-media-icons a{
     color: black;
     font-size: 2rem;
-  }
+}
+.body{
+    
+}
