--- a/src/Home.css
+++ b/src/Home.css
@@ -5,7 +5,6 @@
   } 
 
   .group-pic{
-    margin-top: 10%;
     max-width: 100%;
     max-height: 100%;
   }
