--- a/src/Login.css
+++ b/src/Login.css
@@ -1,5 +1,5 @@
 .login{
     color: black;
-    padding-top: 15%;
     text-align: center;
+    padding-top: 3%;
 }
