--- a/src/about/BigLittle.css
+++ b/src/about/BigLittle.css
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15%;
+    padding-bottom: 15%;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 3%;
 }
 
 .mainText {
