--- a/src/about/Board.css
+++ b/src/about/Board.css
@@ -1,7 +1,7 @@
 .board-members {
     text-align: center;
     color: black;
-    padding-top: 15%;
+    padding-top: 3%;
   }
   
   .card {
