--- a/src/about/Fams.css
+++ b/src/about/Fams.css
@@ -1,6 +1,6 @@
 .Fams{
     color: black;
-    padding-top: 15%;
+    padding-top: 3%;
 }
 
 .mainText {
