--- a/src/about/MissionValues.css
+++ b/src/about/MissionValues.css
@@ -1,10 +1,9 @@
 .MissionValues{
     color: black;
-    padding-top: 8.85%;
+    padding-top: 3%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 20px;
 }
 
 .mlTitle{
