--- a/src/calendar/CKCalendar.css
+++ b/src/calendar/CKCalendar.css
@@ -1,8 +1,8 @@
 .ck-calendar{
     color: black;
-    padding-top: 15%;
     padding-left: 0.5%;
     padding-right: 0.5%;
+    padding-top: 3%;
 }
 
 .fc-event {
