--- a/src/resources/HSChange.css
+++ b/src/resources/HSChange.css
@@ -1,6 +1,6 @@
 .HSChange{
     color: black;
-    padding-top: 15%;
+    padding-top: 3%;
     text-align:center;
 }
 
